Comentarios en archivos, Adminpanel OK

--- a/dona_front/admin.html
+++ b/dona_front/admin.html
@@ -1,3 +1,10 @@
+
+<!--
+  Responsable: Mariela Higuera
+  Descripción: Archivo HTML base para el panel de administración de DonaApp.
+-->
+
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
